fix(ionic-logging-viewer-app): fix alignment of labels

--- a/projects/ionic-logging-viewer-app/src/app/home/home.page.scss
+++ b/projects/ionic-logging-viewer-app/src/app/home/home.page.scss
@@ -3,10 +3,6 @@ ion-col {
     padding: 0;
 }
 
-ion-select {
-    --padding-start: 0;
-}
-
 ion-item>ion-button {
     width: 100%;
 }
